# raytracer-kettlekern

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Resources/: amy.pov  beers.pov  box_nr.pov  bvh.pov  checkerbox.pov  cone.pov  cornell.pov  dof.pov  fresnel1.pov  gnarly.pov  nestedRefract.pov  nestedRefractFog.pov  plainFog.pov  recurse_simp2.pov  rotate.pov  simple-ao.pov  simple.pov  snowman.pov  tori.pov  transforms2.pov  translate.pov
Test/: MainTest.h  PlaneTest.cpp
src/: Flags.h  FormattedToString.cpp  FormattedToString.h  Hit.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h  main.cpp  main.h  parser.cpp  parser.h
src/Ray/: Ray.cpp  Ray.h  RayManager.cpp  RayManager.h
src/Renderer/: Buffer.cpp  Buffer.h  Fragment.cpp  Fragment.h  FragmentOutput.h  Volumetric.cpp  Volumetric.h
src/Renderer/Simplex Noise/: OpenSimplexNoise.cpp  OpenSimplexNoise.hh
src/Scene/: AABB.cpp  AABB.h  Box.cpp  Box.h  Buffer.cpp  Buffer.h  Cone.cpp  Cone.h  Fragment.cpp  Fragment.h  Material.cpp  Material.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  VectorString.cpp  VectorString.h
